разделение на классы